--- a/package.json
+++ b/package.json
@@ -30,11 +30,10 @@
   "homepage": "https://github.com/cncjs/cncjs-pendant-boilerplate#readme",
   "dependencies": {
     "commander": "^5.0.0-4",
-    "inquirer": "^7.1.0",
+    "inquirer": "^7.3.3",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.18",
     "serialport": "^8.0.7",
-    "socket.io-client": "^2.3.0",
-    "vorpal": "^1.12.0"
+    "socket.io-client": "^2.3.0"
   }
 }
