--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "inquirer": "^7.3.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.18",
+    "node-hid": "^2.1.1",
     "serialport": "^8.0.7",
     "socket.io-client": "^2.3.0"
   }
